# ml-ajourhold

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  compose.yml  pyproject.toml
.devcontainer/: Dockerfile  dev.Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd-docker.yml  cd-python.yml  ci-docker.yml  ci-python.yml  scan-codeql.yml
docs/: code-and-security-standards.md  command-cheatsheet.md  repo-structure.md  setup-development-guide.md  troubleshooting.md
notebooks/: demo.ipynb
scripts/: demo.py
src/ml_ajourhold/: __init__.py
tests/: __init__.py  conftest.py
tests/ml_ajourhold/: __init__.py  test_main.py
